UKBMS: calendar summary form updates: sets table/chart default visibility, series visibility checkboxes now kept with labels, location filter now optionally tied to user (with bugfixes), choosing all users now displays all locations in location filter, tweaks to user_id processing and currentyear date filter display.

--- a/client_helpers/prebuilt_forms/css/report_calendar_summary.css
+++ b/client_helpers/prebuilt_forms/css/report_calendar_summary.css
@@ -37,4 +37,9 @@ tr td.week {
 .controls-table label {
 	width: auto;
 }
+.series-fieldset label {
+	width: auto;
+	margin-right: 20px;
+	margin-left: 5px;
+}
 
